--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-.list-user-list-container {
+.list-container {
   display: grid;
-  grid-template-columns: 80px 1fr 3fr;
+  grid-template-columns: 250px 1fr 3fr;
   grid-template-rows: 20px;
-  grid-auto-rows: 80px;
+  grid-auto-rows: 120px;
   grid-gap: 10px 5px;
   margin-bottom: 40px;
 }
@@ -13,8 +13,12 @@
   font-weight: bold;
 }
 
-.list-user-list-container > img {
+.user-container > img {
   width: 80px;
+}
+
+.user-container{
+  display: contents;
 }
 
 input{
